# adbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yaml
bot/: bot.py  dispatcher.py  handlers.py  keyboards.py
bot/utils/: env.py
database/: db.py  models.py
migrations/: env.py
migrations/versions/: 2180a137aa7f_create_user_table.py  2ad72e0b4636_create_tables.py  340b6287a0b2_user_init.py  4d228683a43f_add_user_table.py  5fd52cd0a556_upd_contraints.py  9b867ed5f7b8_set_user_id_to_bit_int.py
utils/: db.py  env.py
