[project]
name = "adbot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
mypy = "^1.14.1"
py-mon = "^2.0.5"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["F401"]

[tool.mypy]
strict = true
