[project]
name = "adbot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
mypy = "^1.14.1"
py-mon = "^2.0.5"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
