[project]
name = "adbot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography (>=44.0.0,<45.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
mypy = "^1.14.1"
py-mon = "^2.0.5"
pytest = "^8.3.4"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
